# course-MAS

./: .gitignore  README.md
module_02_langchain/: .env.template  examples_01_lcel_basics.ipynb  examples_02_lcel_advanced.ipynb  examples_03_prompts.ipynb  examples_04_models.ipynb  examples_05_parsers.ipynb  examples_06_memory.ipynb  hw.md  pyproject.toml
module_04_tools_and_integrations/: ex_file_security.py  ex_tool_DuckDuckGoSearchRun.py  ex_tool_FileManagementToolkit.py  ex_tool_RequestsToolkit.py  ex_tool_ShellTool.py  ex_tool_decorator.py  ex_tool_docker_sandbox.py  ex_tool_mcp_client.py  ex_tool_mcp_server.py  ex_tool_openapi.py  ex_tool_pandas_dataframe_agent.py  ex_tool_simple.py  example.json  examples_lecture_4_1_function_calling.py  examples_lecture_4_2_creating_tools_langchain.py  examples_lecture_4_3_toolkits_and_integrations.py  examples_lecture_4_4_sql_and_databases.py  examples_lecture_4_5_openapi_and_api_chains.py  examples_lecture_4_6_multimodal_tools.py  examples_lecture_4_7_mcp.py  lecture_01_function_calling.md  lecture_02_creating_tools_langchain.md  lecture_03_toolkits_and_integrations.md  lecture_04_sql_and_databases.md  lecture_05_openapi_and_api_chains.md  lecture_06_multimodal_tools.md  lecture_07_mcp_model_context_protocol.md  main.py  pyproject.toml
module_05_langgraph/: examples_01_graphs.ipynb  examples_02_state.ipynb  examples_03_agent_tools.ipynb  examples_04_persistence.ipynb  examples_05_hitl.ipynb  examples_06_error_handling.ipynb  examples_07_middleware.ipynb  examples_08_send.ipynb  examples_09_functional_api.ipynb  lecture_01_from_chains_to_graphs.md  lecture_02_state_management.md  lecture_03_agent_tools_streaming.md  lecture_04_persistence_and_time_travel.md  lecture_05_human_in_the_loop.md  lecture_06_error_handling.md  lecture_07_middleware.md  (+4 more)
(+17 files in other folders)
