[project]
name = "project-mas-module2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.8",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
lint = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-line-length = 120
