[project]
name = "module-04-tools-and-integrations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "ddgs>=9.10.0",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "openapi-pydantic>=0.5.1",
    "pandas>=3.0.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.4",
]
