[project]
name = "langgraph-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.4",
    "fastapi>=0.135.1",
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
